@@ -35,19 +35,18 @@ public:
 	/**
 	 * Constructor
 	 */
-	NLBOptiSimilarityRater();
+	NLBOptiSimilarityRater() { };
 
 	/**
 	 * Destructor
 	 */
-	virtual ~NLBOptiSimilarityRater();
+	virtual ~NLBOptiSimilarityRater() { };
 
 	/**
 	 * Computes the similarity of seq1[x1] and seq2[y2].
 	 * x1 and y1 are ignored for now.
 	 */
 	virtual double getScore(Sequences * const seqs, const int x1, const int y1, const int x2, const int y2) const;
-
 
 };
 
